@@ -1,3 +1,6 @@
+        * Enforce the rules from the Auth 2.0 spec about which fields
+          MUST be signed in positive assertion messages.
+
 	* Return a more sensible error (no_head_tag) if the identifier
 	  URL returns an empty (0-byte) HTML document.
 
